--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -10,7 +10,10 @@
 # bold_font        auto
 # italic_font      auto
 # bold_italic_font auto
-font_family Iosevka Nerd Font Mono
+#font_family Iosevka Nerd Font Mono
+#font_family RobotoMono Nerd Font Mono, Demi Bold
+#font_family RobotoMono Nerd Font Propo, Demi Bold
+font_family SauceCodePro Nerd Font Propo, Black
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
@@ -27,7 +30,7 @@ bold_italic_font auto
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 12.0
+font_size 13.0
 
 #: Font size (in pts)
 
