--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -10,13 +10,25 @@
 # bold_font        auto
 # italic_font      auto
 # bold_italic_font auto
+#
 #font_family Iosevka Nerd Font Mono
-#font_family RobotoMono Nerd Font Mono, Demi Bold
-#font_family RobotoMono Nerd Font Propo, Demi Bold
-font_family SauceCodePro Nerd Font Propo, Black
-bold_font        auto
-italic_font      auto
-bold_italic_font auto
+#bold_font        auto
+#italic_font      auto
+#bold_italic_font auto
+#
+
+#font_family RobotoMono Nerd Font Mono Demi Bold
+#bold_font        auto
+#italic_font      auto
+#bold_italic_font auto
+
+#font_family RobotoMono Nerd Font Propo Demi Bold
+#font_family SauceCodePro Nerd Font Propo Black
+#
+font_family "Ubuntu Nerd Font Condensed"
+bold_font "Ubuntu Nerd Font Bold"
+italic_font "Ubuntu Nerd Font Italic"
+bold_italic_font "Ubuntu Nerd Font Bold Italic"
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -30,7 +42,7 @@ bold_italic_font auto
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 13.0
+font_size 14.0
 
 #: Font size (in pts)
 
