--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -42,7 +42,7 @@ bold_italic_font "Ubuntu Nerd Font Bold Italic"
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 14.0
+font_size 13.0
 
 #: Font size (in pts)
 
@@ -757,7 +757,7 @@ font_size 14.0
 
 #: The foreground and background colors
 
-background_opacity 0.67
+background_opacity 0.77
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
@@ -1019,7 +1019,7 @@ clipboard_control write-clipboard write-primary no-append
 
 #: OS specific tweaks {{{
 
-# wayland_titlebar_color system
+wayland_titlebar_color system
 
 #: Change the color of the kitty window's titlebar on Wayland systems
 #: with client side window decorations such as GNOME. A value of
@@ -1095,7 +1095,7 @@ clipboard_control write-clipboard write-primary no-append
 #: mouse cursor invisible on dual GPU machines. Changing this setting
 #: by reloading the config is not supported.
 
-# linux_display_server auto
+linux_display_server wayland 
 
 #: Choose between Wayland and X11 backends. By default, an appropriate
 #: backend based on the system state is chosen automatically. Set it
