--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -25,10 +25,17 @@
 #font_family RobotoMono Nerd Font Propo Demi Bold
 #font_family SauceCodePro Nerd Font Propo Black
 #
-font_family "Ubuntu Nerd Font Condensed"
-bold_font "Ubuntu Nerd Font Bold"
-italic_font "Ubuntu Nerd Font Italic"
-bold_italic_font "Ubuntu Nerd Font Bold Italic"
+
+#font_family "Ubuntu Nerd Font Condensed"
+#bold_font "Ubuntu Nerd Font Bold"
+#italic_font "Ubuntu Nerd Font Italic"
+#bold_italic_font "Ubuntu Nerd Font Bold Italic"
+
+font_family "CaskaydiaCove Nerd Font, Demi Bold"
+bold_font "CaskaydiaCove Nerd Font, Bold"
+italic_font "CaskaydiaCove Nerd Font, Demi Bold Italic"
+bold_italic_font "CaskaydiaCove Nerd Font, Bold Italic"
+
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
