Trying to add some kitty conf to allow for better underline

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -36,7 +36,6 @@ bold_font "CaskaydiaCove Nerd Font, Bold"
 italic_font "CaskaydiaCove Nerd Font, Demi Bold Italic"
 bold_italic_font "CaskaydiaCove Nerd Font, Bold Italic"
 
-
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
 #: list-fonts` command. By default they are derived automatically, by
@@ -185,6 +184,15 @@ font_size 13.0
 #: characters These values are in pts. They will be scaled by the
 #: monitor DPI to arrive at a pixel value. There must be four values
 #: corresponding to thin, normal, thick, and very thick lines.
+#
+#
+#modify_font underline_position 4
+#modify_font underline_thickness 150%
+#modify_font strikethrough_position 2px
+
+#modify_font cell_width 80%
+#modify_font cell_height -2px
+#modify_font baseline 3
 
 #: }}}
 
