--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -31,10 +31,15 @@
 #italic_font "Ubuntu Nerd Font Italic"
 #bold_italic_font "Ubuntu Nerd Font Bold Italic"
 
-font_family "CaskaydiaCove Nerd Font, Demi Bold"
-bold_font "CaskaydiaCove Nerd Font, Bold"
-italic_font "CaskaydiaCove Nerd Font, Demi Bold Italic"
-bold_italic_font "CaskaydiaCove Nerd Font, Bold Italic"
+#font_family "CaskaydiaCove Nerd Font, Demi Bold"
+#bold_font "CaskaydiaCove Nerd Font, Bold"
+#italic_font "CaskaydiaCove Nerd Font, Demi Bold Italic"
+#bold_italic_font "CaskaydiaCove Nerd Font, Bold Italic"
+
+font_family "MesloLGL Nerd Font Mono"
+bold_font auto
+italic_font auto
+bold_italic_font auto
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
